// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SideDrawer renders correctly when closed 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Drawer content",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Main content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders correctly when open 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Drawer content",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Main content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with left position (default) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Left drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with right position 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Right drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with front drawer type (default) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Front drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with back drawer type 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Back drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with slide drawer type 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Slide drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer renders with custom drawer styles 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Styled drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;

exports[`SideDrawer accepts onOpen and onClose callbacks 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Drawer",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {},
      "type": "SafeAreaView",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "open",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [class Function],
        "testID": "mock-drawer-open",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "close",
          ],
          "props": {
            "style": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPress": [class Function],
        "testID": "mock-drawer-close",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "mock-drawer",
  },
  "type": "View",
}
`;
